<resources>
    <string name="app_name">Recette Helthy</string>
    <string name="btStart">Food Menu</string>
    <string name="search">Search</string>
    <string name="add">Add</string>
    <string name="title">Title</string>
    <string name="photo">Picture</string>
    <string name="ingredient">Ingredient</string>
    <string name="how">Preparation</string>
    <string name="btImport">Choose a picture</string>
    <string name="validate">Validate</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
</resources>
