<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="24dp"
        android:text="@string/title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_title"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="49dp"
        android:text="@string/photo"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/ingredient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgViewPhoto"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="50dp"
        android:text="@string/ingredient"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/how"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_ingredient"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="99dp"
        android:text="@string/how"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/editText_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/title"
        android:layout_marginStart="-2dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/title"
        android:layout_toRightOf="@+id/title"
        android:inputType="textPersonName" />

    <ImageView
        android:id="@+id/imgViewPhoto"
        android:layout_width="250dp"
        android:layout_height="80dp"
        android:layout_alignTop="@+id/photo"
        android:layout_marginStart="-1dp"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="-12dp"
        android:layout_toEndOf="@+id/photo"
        android:layout_toRightOf="@+id/photo"
        android:contentDescription="@string/btImport"
        android:src="@mipmap/camera"></ImageView>

    <Button
        android:id="@+id/btImport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/photo"
        android:layout_marginStart="248dp"
        android:layout_marginLeft="-1dp"
        android:layout_marginTop="4dp"
        android:layout_toEndOf="@+id/photo"
        android:layout_toRightOf="@+id/imgViewPhoto"
        android:background="@color/colorPrimary"
        android:text="@string/btImport"
        android:textColor="@color/colorAccent"></Button>

    <EditText
        android:id="@+id/editText_ingredient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ingredient"
        android:layout_marginStart="-2dp"
        android:layout_marginLeft="-2dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/ingredient"
        android:layout_toRightOf="@+id/ingredient"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/editText_how"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/how"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="0dp"
        android:layout_toEndOf="@+id/how"
        android:layout_toRightOf="@+id/how"
        android:inputType="textMultiLine" />
</RelativeLayout>